--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -26,15 +26,14 @@
         android:typeface="monospace"
         android:id="@+id/textView" />
 
-    <!--<SeekBar
-        android:layout_width="200dp"
+    <SeekBar
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/seekBar"
-        android:layout_max="5"
-        android:layout_margintTop="66dp"
-        android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/textView"
-        android:layout_alignStart="@+id/textView" />-->
+        android:layout_below="@+id/ratingBar"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="70dp"
+        android:max="20" />
 
     <RatingBar
         android:layout_width="wrap_content"
